--- a/Extracción_de_Datos.ipynb
+++ b/Extracción_de_Datos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgVFs9MyQLDzUmA9DgJLdQ",
+      "authorship_tag": "ABX9TyO0CNXnOsW70ymW/2gT+N70",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,8 @@
       "source": [
         "#Filtro por objeto\n",
         "filtro1=df[df[\"continent\"]==\"Asia\"]\n",
-        "filtro1"
+        "filtro1\n",
+        "#Filtra la columna continent mostrando solo los valores que dicen Asia"
       ],
       "metadata": {
         "id": "jhRSMYpkIJ7I"
@@ -106,7 +107,9 @@
       "source": [
         "#Filtro por filas\n",
         "filtro2_1=df.iloc[200:204,:] #filas consecutivas\n",
+        "#Filtra la fila mostrando desde la 200 hasta la 203 con todas sus columnas\n",
         "#filtro2_2=df.iloc[[10,20,36],:] #filas no consecutivas\n",
+        "#Filtra la fila mostrando la 10, 20 y 36 en ese orden con todas sus columnas\n",
         "filtro2_1\n",
         "#filtro2_2"
       ],
@@ -121,7 +124,9 @@
       "source": [
         "#Filtro por columnas\n",
         "#filtro3_1=df.iloc[:,4:8] #columnas consecutivas\n",
+        "#Filtra la columna mostrando desde la 4 hasta la 7 con todas sus filas\n",
         "filtro3_2=df.iloc[:,[10,1,6]] #columnas no consecutivas\n",
+        "#Filtra la colmna mostrando la 10, 1 y 6 en ese orden con todas sus filas\n",
         "#filtro3_1\n",
         "filtro3_2"
       ],
@@ -148,6 +153,7 @@
       "source": [
         "#Filtro de filas vs columnas\n",
         "filtro4=df.loc[[\"Republic\",\"Federal Republic\"],[\"region\"]]\n",
+        "#Filtra la fila government_form mostrando solo los que dicen Republic y Federal Republic, con solo la columna region\n",
         "filtro4"
       ],
       "metadata": {
@@ -161,6 +167,7 @@
       "source": [
         "#Filtro por cabecera\n",
         "filtro5=df.head(8)\n",
+        "#Filtra y solo muetra los 8 primeros valores\n",
         "filtro5"
       ],
       "metadata": {
@@ -183,6 +190,7 @@
       "source": [
         "#Filtro por comparación\n",
         "filtro6=df[df[\"life_expectancy\"]<40]\n",
+        "#Filtra los valores menores a 40 que aparecen en la columna life_expectancy\n",
         "filtro6"
       ],
       "metadata": {
@@ -196,6 +204,7 @@
       "source": [
         "#Filtro Y\n",
         "filtro7=df[(df[\"life_expectancy\"]<40)&(df[\"surface_area\"]>800)]\n",
+        "#Filtra los valores menores a 40 que aparecen en la columna life_expectancy y los mayores a 800 en la columna surface_area\n",
         "filtro7"
       ],
       "metadata": {
@@ -209,6 +218,7 @@
       "source": [
         "#Filtro O\n",
         "filtro8=df[(df[\"life_expectancy\"]<40)|(df[\"surface_area\"]>800)]\n",
+        "#Filtra los valores menores a 40 que aparecen en la columna life_expectancy o los mayores a 800 en la columna surface_area\n",
         "filtro8"
       ],
       "metadata": {
@@ -222,6 +232,7 @@
       "source": [
         "#Filtro not\n",
         "filtro9=df[~(df[\"life_expectancy\"]<40)&~(df[\"surface_area\"]>800)]\n",
+        "#Filtra los valores que no son menores a 40 que aparecen en la columna life_expectancy y los que no son mayores a 800 en la columna surface_area\n",
         "filtro9"
       ],
       "metadata": {
